--- a/package.json
+++ b/package.json
@@ -8,8 +8,33 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
+    "apollo-boost": "^0.4.9",
+    "apollo-client": "^2.6.10",
+    "apollo-link-context": "^1.0.20",
+    "apollo-server-micro": "^2.15.1",
+    "bulma": "^0.9.0",
+    "gql": "^1.1.2",
+    "graphql": "^15.3.0",
+    "js-cookie": "^2.2.1",
     "next": "9.4.4",
+    "next-apollo": "^4.0.1",
+    "next-redux-wrapper": "^6.0.2",
+    "pure-react-carousel": "^1.27.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-apollo": "^3.1.5",
+    "react-dom": "16.13.1",
+    "react-fontawesome": "^1.7.1",
+    "react-hook-form": "^6.0.2",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.41",
+    "redux-devtools-extension": "^2.13.8",
+    "typescript": "^3.9.6"
   }
 }
